# production-ai

./: LICENSE  README.md
.github/workflows/: deploy.yml  destroy.yml
guide/: extra-topic-explanation.md  skills-acquired.md
guide/week-2/: day2.md  day4.md
projects/week-1/business-idea-generator/: package-lock.json  package.json
projects/week-1/healthcare-ai/: package-lock.json  package.json
projects/week-1/healthcare-ai/pages/: _document.tsx
projects/week-2/twin/: .gitignore
projects/week-2/twin/backend/: context.py  deploy.py  pyproject.toml  requirements.txt  resources.py  server.py  speech-to-speech.py  voice.py
projects/week-2/twin/backend/api/: index.py
projects/week-2/twin/backend/data/: facts.json  style.txt  summary.txt
projects/week-2/twin/frontend/: next.config.ts  package-lock.json  package.json
projects/week-2/twin/frontend/app/: globals.css  layout.tsx  page.tsx
projects/week-2/twin/frontend/app/speech/: page.tsx
projects/week-2/twin/frontend/components/: speechTospeech.tsx  twin.tsx  voice.tsx
projects/week-2/twin/memory/: ae9ee4c4-49ba-45b1-84e9-ffd652b1d80a.json
projects/week-2/twin/scripts/: deploy.ps1  deploy.sh  destroy.ps1
projects/week-2/twin/terraform/: main.tf  terraform.tfvars  variables.tf  versions.tf
week1/guide/: extra-topic-explanation.md  skills-acquired.md  web-topic.md
week1/guide/week-1/: day2.md  day4.md
week1/guide/week-2/: day2.md
