[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.74",
    "deploy-py>=0.3.0",
    "fastapi>=0.121.1",
    "mangum>=0.19.0",
    "openai>=2.7.2",
    "openai-agents>=0.5.1",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
